k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apptolast-menus-dev
  labels:
    app.kubernetes.io/name: menus-backend
    app.kubernetes.io/managed-by: rancher
    environment: dev
